# GPU-Rendering

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CMakeSettings.json  README.md  appveyor.yml
Direct3D/: CMakeLists.txt
Direct3D/Minimal Direct3D Example/: main.cpp
Direct3D/Minimal Direct3D Example/shaders/: pixelShader.hlsl  vertexShader.hlsl
Minimal OpenGL Example/: CMakeLists.txt  main.cpp
Minimal OpenGL Example/shaders/: vertex_shader.glsl
OpenGL/: CMakeLists.txt
OpenGL/Minimal OpenGL Example/: CMakeLists.txt  main.cpp
OpenGL/Minimal OpenGL Example/shaders/: vertex_shader.glsl
OpenGL/ext/glew-2.1.0/: glew.pc
